--- a/Client/Components/OptionsMenuComponent.razor
+++ b/Client/Components/OptionsMenuComponent.razor
@@ -12,6 +12,7 @@
 @if (iseditBtnClicked)
 {
     editBtnClicked.InvokeAsync();
+    iseditBtnClicked = !iseditBtnClicked;
 }
 
 @if (isdeleteBtnClicked)
