אקורדיון+ עדכון סך הוצאות + עדכון dropdown עריכת תת קטגוריה+ הצגת תת-קט' אחרי הוספה +מחיקת תת-קט'
פתיחה וסגירה של האקורדיון קטגוריות, בלחיצה על הכפתור.
עדכון סך ההוצאות/הכנסות בתת קטגוריה לאחר הזנה.
עדכון הdropdown של הקטגוריות בעריכת תת קטגוריה, כך שהקטגוריה הרלוונטית תוצג ראשונה.
לאחר הוספת תת קטגוריה היא תופיע אוטומטית בעמוד.
מחיקת תת קטגוריה.

--- a/Client/Components/AddTransactionComponent.razor
+++ b/Client/Components/AddTransactionComponent.razor
@@ -135,6 +135,9 @@
     [Parameter]
     public EventCallback refreshSubCategories { get; set; }
 
+    [Parameter]
+    public EventCallback<double> addTransactionToTotal { get; set; }
+
     private DateTime? selectedDate = DateTime.Today; // Initialize selectedDate to today
 
     TransactionToAdd newTransaction = new TransactionToAdd()
@@ -175,6 +178,7 @@
             if (!overdraftDetected)
             {
                 Console.WriteLine("ההזנה נשמרה בהצלחה :)");
+                addTransactionToTotal.InvokeAsync(newTransaction.transValue);
                 isTransactionOverlayOpen.InvokeAsync(false);
                 refreshBudget.InvokeAsync();
                 refreshSubCategories.InvokeAsync();
@@ -199,6 +203,7 @@
             await checkOverdraft();
             if (!overdraftDetected)
             {
+                addTransactionToTotal.InvokeAsync(newTransaction.transValue);
                 newTransaction = new TransactionToAdd();
             }
 
